wazuh/indexer_stack/wazuh-dashboard/dashboard-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wazuh-dashboard
  namespace: wazuh
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wazuh-dashboard
  template:
    metadata:
      labels:
        app: wazuh-dashboard
    spec:
      volumes:
        - name: dashboard-config
          configMap:
            name: dashboard-config
        - name: dashboard-certs
          secret:
            secretName: dashboard-certs
      containers:
        - name: wazuh-dashboard
          image: wazuh/wazuh-dashboard:4.7.3
          ports:
            - containerPort: 443
              name: dashboard
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: 400m
              memory: 1Gi
          volumeMounts:
            - name: dashboard-certs
              mountPath: /usr/share/wazuh-dashboard/certs
              readOnly: true
            - name: dashboard-config
              mountPath: /usr/share/wazuh-dashboard/config/opensearch_dashboards.yml
              subPath: opensearch_dashboards.yml
