wazuh/indexer_stack/wazuh-dashboard/dashboard-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard
  namespace: wazuh
  labels:
    app: wazuh-dashboard
spec:
  type: ClusterIP
  selector:
    app: wazuh-dashboard
  ports:
    - name: http
      port: 5601
      targetPort: 5601
      protocol: TCP
